# tauri-plugin-p256-signer

./: .npmrc  Cargo.toml  README.md  bun.lockb  package.json  pnpm-lock.yaml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build.yaml  publish.yaml  release.yaml  telegram-notification.yml
android/src/main/java/app/tauri/p256/: P256SignerPlugin.kt
guest-js/: index.ts
ios/: Package.swift
ios/Sources/P256SignerPlugin/: CBORDecoder.swift  P256SignerPlugin.swift  PasskeyDelegate.swift  PasskeyTypes.swift
ios/Tests/P256SignerPluginTests/: P256SignerPluginTests.swift
