[package]
name = "tauri-plugin-p256-signer"
version = "0.3.1"
authors = [ "0x330a" ]
description = "JS Bindings for the tauri-plugin-p256-signer Tauri plugin"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-p256-signer"

[dependencies]
tauri = "2.5.0"
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-build = "2.4.1"
tauri-plugin = { version = "2.2.0", features = ["build"] }
tauri-cli = "2.7.1"
